# neuroMMSig

./: .bumpversion.cfg  .gitignore  LICENSE  README.md  setup.cfg  tox.ini
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
data/: TGF-beta_receptor_pathway.txt
docs/source/: cli.rst  conf.py  index.rst  installation.rst  usage.rst
examples/: pathway_network_stat.txt
src/mechanrich/: __init__.py  __main__.py  cli.py  constants.py  data_reader.py  mechanrich.py  preprocessing.py  reader.py  startup.py  utils.py  version.py
src/mechanrich/interface/: data_reader.py
src/neurommsig/: __init__.py  cli.py  constants.py  neurommsig.py  preprocessing.py  reader.py  startup.py
tests/: __init__.py  test_mechanrich.py  test_neurommsig.py  test_version.py
tests/test_data/: fake_pathway.txt
