##########################
# Setup.py Configuration #
##########################
[metadata]
name = mechanrich
version = 0.0.3-dev
description = Python package for mechanism enrichment using NeuroMMSig
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/zli9/Mechanism-enrichment-using-NeuroMMSig
download_url = https://github.com/zli9/Mechanism-enrichment-using-NeuroMMSig.git
project_urls =
    Bug Tracker = https://github.com/zli9/Mechanism-enrichment-using-NeuroMMSig/issues
    Source Code = https://github.com/zli9/Mechanism-enrichment-using-NeuroMMSig

# Author information
author = Zexin Li
author_email = zli30329@gmail.com
maintainer = zli9
maintainer_email = zli30329@gmail.com

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only

keywords =
    Bioinformatics, Database, Enrichment network

[options]
install_requires =
    click==8.0
    matplotlib==3.5.1
    pandas==1.4.1
    numpy==1.22.2
    networkx==2.6.2
    pytest==7.0.1


# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.8

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    coverage
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints
    sphinx_automodapi
    # To include LaTeX comments easily in your docs. 
    # If you uncomment this, don't forget to do the same in docs/conf.py
    # texext


[options.entry_points]
console_scripts =
    mechanrich = mechanrich.cli:main


######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = mechanrich
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/mechanrich
    .tox/*/lib/python*/site-packages/mechanrich

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == __main__:
    if TYPE_CHECKING:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short

#########################
# Flake8 Configuration  #
# (.flake8)             #
#########################
[flake8]
ignore =
    S301 # pickle
    S403 # pickle
    S404
    S603
    W503 # Line break before binary operator (flake8 is wrong)
    E203  # whitespace before ':'
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    tests/fixtures/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    data
max-line-length = 120
max-complexity = 20
import-order-style = pycharm
application-import-names =
    mechanrich
    tests
